[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.43",
    "pillow>=12.1.0",
    "markupsafe>=3.0.2",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "sendgrid>=6.12.5",
    "openai>=1.0.0",
    "alembic>=1.13.0",
]
